Turning getting top employees per single company into stream-only, without loop